--- a/org/prog-styles/03-monolith/clojure.org
+++ b/org/prog-styles/03-monolith/clojure.org
@@ -71,14 +71,14 @@ done
 **** TODO linux
 ** COMMENT Program
 
-*** [87%] Progress
+*** [100%] Progress
 
 # - [ ] We should be able to do it in a transducers style since it is Clojure after all
 - [X] Read the stop words files
 - [X] Create stop words map
 - [X] Read the pride and prejudice file and read the first line
 - [X] Read the sequence of words from the pride and prejudice file
-- [ ] Skipping the stop words
+- [X] Skipping the stop words
 - [X] Count the words
 - [X] Sort the words in the map
 - [X] Print the top 25
@@ -102,15 +102,19 @@ For the Clojure example, we put everything into one =let=.
 
 I want to cwd to somewhere and print the path:
 
-** The prototype step
+** DONE The prototype step
 
 #+begin_src clojure :results output :exports both
   (System/setProperty "user.dir" "./../../../exercises-in-programming-style/")
 
-  (def stop-words-file (clojure.java.io/file (System/getProperty "user.dir") "stop_words.txt"))
-  (def stop-words-list (clojure.string/split (slurp stop-words-file) #","))
-  (def pride-prejudice-file (clojure.java.io/file (System/getProperty "user.dir") "pride-and-prejudice.txt"))
-  (def pride-prejudice-words {})
+  (def stop-words-file 
+    (clojure.java.io/file (System/getProperty "user.dir") "stop_words.txt"))
+
+  (def stop-words
+    (clojure.string/split (slurp stop-words-file) #","))
+
+  (def pride-prejudice-file 
+    (clojure.java.io/file (System/getProperty "user.dir") "pride-and-prejudice.txt"))
 
   (with-open [reader (clojure.java.io/reader pride-prejudice-file)]
     (let [lines (line-seq reader)
@@ -120,22 +124,23 @@ I want to cwd to somewhere and print the path:
                   #"[^a-zA-Z0-9]" " " ; remove non-alphanumerical
                   )
                  #" ")
-
           word-count (reduce (fn [counter word]
                                (inc counter)
                                ) 0 words)
-          
+          filtered-words (filter #(not 
+	                            (or (some #{%1} stop-words)
+				        (= %1 "")
+				    )) words)
           word-frequency-list (reduce (fn [word-frequency word]
                                         (update-in word-frequency [word] (fnil inc 0))
                                       )
-                                      {} words)
+                                      {} filtered-words)
          sorted-word-frequency-list (into (sorted-map-by
                                       #(compare [(get word-frequency-list %2) %2]
                                                 [(get word-frequency-list %1) %1]))
-                                       word-frequency-list)
-                               ]
+                                       word-frequency-list)]
          (doseq [word-pair (take 25 sorted-word-frequency-list)]
-           (print (key word-pair) "  -  " (val word-pair))
+           (print (key word-pair) " - " (val word-pair))
            (println "")
          )
     )
@@ -144,30 +149,29 @@ I want to cwd to somewhere and print the path:
 
 #+RESULTS:
 #+begin_example
-   -   56486
-the   -   4507
-to   -   4243
-of   -   3728
-and   -   3658
-her   -   2225
-i   -   2070
-a   -   2012
-in   -   1937
-was   -   1848
-she   -   1710
-that   -   1594
-it   -   1550
-not   -   1450
-you   -   1428
-he   -   1339
-his   -   1271
-be   -   1260
-as   -   1191
-had   -   1176
-with   -   1100
-for   -   1086
-but   -   1007
-is   -   886
-have   -   847
+mr   -   786
+s   -   661
+elizabeth   -   635
+very   -   488
+darcy   -   418
+such   -   395
+mrs   -   343
+much   -   329
+more   -   327
+bennet   -   323
+bingley   -   306
+jane   -   295
+miss   -   283
+one   -   275
+know   -   239
+before   -   229
+herself   -   227
+though   -   226
+well   -   224
+never   -   220
+sister   -   218
+soon   -   216
+think   -   211
+now   -   209
+time   -   203
 #+end_example
-
